# open-api-scorer

./: README.md  pyproject.toml
app/: best_practices_scorer.py  descriptions_scorer.py  examples_scorer.py  main.py  open_api_scorer.py  paths_operations_scorer.py  response_codes_scorer.py  schema_types_scorer.py  scoring_strategy.py  security_scorer.py  validator.py
samples/: sample1.json
tests/: test_integration_with_deficient_spec.py  test_scoring.py
